# kis

./: CMakeLists.txt  README.md  home.cpp  home.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  screensaver.cpp  screensaver.h  screensaver.ui  user.cpp  user.h
database/: queries.sql  schema.sql
dialogs/: charge_dialog.cpp  charge_dialog.h  charge_dialog.ui
includes/: user.cpp  user.h  utils.cpp  utils.h
